--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   ms-notification:
     build:
@@ -7,7 +6,6 @@ services:
         BUILDPLATFORM: linux/arm64
     platform: linux/arm64
     ports:
-      - "3333:3333"
-    volumes:
-      - .:/app
-      - /app/node_modules
+      - "${PORT}:${PORT}"
+    env_file:
+      - .env
