--- a/package.json
+++ b/package.json
@@ -11,10 +11,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.5.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.6.0"
   }
 }
